// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post.jsx renders correctly for creator 1`] = `
<div
  className="post"
>
  <div
    className="post-content"
  >
    <div
      className="header"
    >
      <div
        className="avatar"
        style={
          Object {
            "backgroundImage": "url(https://api.adorable.io/avatars/60/Alisa)",
          }
        }
      />
      <Link
        replace={false}
        to="/user/Alisa"
      >
        <span
          className="name"
        >
          Alisa
        </span>
      </Link>
      <span
        className="created"
      >
        1/1/2018
      </span>
      <button
        className="remove-btn"
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
    <div
      className="text"
    >
      Azaza
    </div>
  </div>
</div>
`;

exports[`Post.jsx renders correctly for not creator 1`] = `
<div
  className="post"
>
  <div
    className="post-content"
  >
    <div
      className="header"
    >
      <div
        className="avatar"
        style={
          Object {
            "backgroundImage": "url(https://api.adorable.io/avatars/60/Alisa)",
          }
        }
      />
      <Link
        replace={false}
        to="/user/Alisa"
      >
        <span
          className="name"
        >
          Alisa
        </span>
      </Link>
      <span
        className="created"
      >
        1/1/2018
      </span>
    </div>
    <div
      className="text"
    >
      Azaza
    </div>
  </div>
</div>
`;
